NAS-141056: Fix spacing in container detail cards and global config form

--- a/src/app/pages/containers/components/all-containers/all-containers-header/global-config-form/global-config-form.component.scss
+++ b/src/app/pages/containers/components/all-containers/all-containers-header/global-config-form/global-config-form.component.scss
@@ -2,6 +2,12 @@
 
 @include tn-form-field-spacing();
 
+ix-ip-input-with-netmask {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0;
+}
+
 .hint {
   color: var(--yellow);
   font-size: 12px;
